--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,11 @@ body {
 	font-family: "Muli", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	font-smoothing: antialiased;
+	text-transform: none;
+}
+
+.text-uppercase {
+    text-transform: uppercase;
 }
 
 h1,
